--- a/login.html
+++ b/login.html
@@ -67,7 +67,7 @@
             statusDiv.textContent = '';
 
             try {
-                const response = await fetch('http://127.0.0.1:5000/api/login', {
+                const response = await fetch('https://grantera-website.onrender.com', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({ email, password }),
