--- a/contact.html
+++ b/contact.html
@@ -106,7 +106,7 @@
                 const data = Object.fromEntries(formData.entries());
 
                 try {
-                    const response = await fetch('http://127.0.0.1:5000/api/contact', {
+                    const response = await fetch('https://grantera-website.onrender.com', {
                         method: 'POST',
                         headers: {
                             'Content-Type': 'application/json',
